--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = "0.11"
+reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+chrono = "0.4"
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
