--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /target
 .env
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Provider files
+*.tfprovider
